[gd_scene load_steps=16 format=3 uid="uid://bb5yu55jng3ek"]

[ext_resource type="Script" path="res://particle_life.gd" id="1_1flt5"]
[ext_resource type="Script" path="res://camera_movement.gd" id="2_hrovq"]
[ext_resource type="Script" path="res://FpsLabel.gd" id="3_m6ham"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_es8bu"]
vertex_color_use_as_albedo = true

[sub_resource type="SphereMesh" id="SphereMesh_hga30"]
material = SubResource("StandardMaterial3D_es8bu")

[sub_resource type="MultiMesh" id="MultiMesh_rnxrb"]
transform_format = 1
mesh = SubResource("SphereMesh_hga30")

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_w4oc6"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_g0nml"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_45w8o"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_0akae"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_jylc8"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_db0lp"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_eqshp"]
transparency = 4
cull_mode = 1
albedo_color = Color(0.345098, 0.443137, 0.501961, 0.0941176)
metallic = 0.78
metallic_specular = 0.56
metallic_texture = SubResource("NoiseTexture2D_g0nml")
roughness = 0.1
roughness_texture = SubResource("NoiseTexture2D_jylc8")
normal_enabled = true
normal_scale = 0.35
normal_texture = SubResource("NoiseTexture2D_45w8o")
rim = 0.0
anisotropy = 1.0
anisotropy_flowmap = SubResource("NoiseTexture2D_w4oc6")
subsurf_scatter_texture = SubResource("NoiseTexture2D_db0lp")
refraction_scale = 1.0
refraction_texture = SubResource("NoiseTexture2D_0akae")

[sub_resource type="SphereMesh" id="SphereMesh_drbe8"]
material = SubResource("StandardMaterial3D_eqshp")

[sub_resource type="Environment" id="Environment_m44sp"]

[node name="ParticleLife" type="MultiMeshInstance3D"]
multimesh = SubResource("MultiMesh_rnxrb")
script = ExtResource("1_1flt5")

[node name="UniverseSphere" type="MeshInstance3D" parent="."]
transform = Transform3D(200, 0, 0, 0, 200, 0, 0, 0, 200, 0, 0, 0)
mesh = SubResource("SphereMesh_drbe8")
skeleton = NodePath("../..")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 120)
script = ExtResource("2_hrovq")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_m44sp")

[node name="MenuWindow" type="Window" parent="."]
mode = 1
title = "Menu"
position = Vector2i(20, 40)
size = Vector2i(400, 600)
transparent = true
extend_to_title = true
keep_title_visible = true

[node name="MarginContainer" type="MarginContainer" parent="MenuWindow"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Tabs" type="TabContainer" parent="MenuWindow/MarginContainer"]
layout_mode = 2

[node name="Simulation" type="VBoxContainer" parent="MenuWindow/MarginContainer/Tabs"]
layout_mode = 2

[node name="ControlsLabel" type="Label" parent="MenuWindow/MarginContainer/Tabs/Simulation"]
layout_mode = 2
text = "
ESC: quit
Camera: 
WASD
up / down: Shift / Space
mouse pan: C"

[node name="FpsLabel" type="Label" parent="MenuWindow/MarginContainer/Tabs/Simulation"]
layout_mode = 2
text = "FPS: "
script = ExtResource("3_m6ham")

[node name="SeedLabel" type="Label" parent="MenuWindow/MarginContainer/Tabs/Simulation"]
layout_mode = 2
text = "Seed:"

[node name="SeedLineEdit" type="LineEdit" parent="MenuWindow/MarginContainer/Tabs/Simulation"]
unique_name_in_owner = true
layout_mode = 2

[node name="UpdateButton" type="Button" parent="MenuWindow/MarginContainer/Tabs/Simulation"]
unique_name_in_owner = true
layout_mode = 2
text = "Update"

[node name="WrapUniverseCheckBox" type="CheckBox" parent="MenuWindow/MarginContainer/Tabs/Simulation"]
unique_name_in_owner = true
layout_mode = 2
text = "Wrap Universe"

[node name="NumParticlesSpinBox" type="SpinBox" parent="MenuWindow/MarginContainer/Tabs/Simulation"]
unique_name_in_owner = true
layout_mode = 2
max_value = 10000.0
value = 400.0
alignment = 2
prefix = "Number of Particles:"

[node name="NumTypesSpinBox" type="SpinBox" parent="MenuWindow/MarginContainer/Tabs/Simulation"]
unique_name_in_owner = true
layout_mode = 2
max_value = 16.0
value = 3.0
alignment = 2
prefix = "Number of Particle Types:"

[node name="RunOnGpuCheckBox" type="CheckBox" parent="MenuWindow/MarginContainer/Tabs/Simulation"]
unique_name_in_owner = true
layout_mode = 2
text = "Run on GPU"

[node name="Particles" type="VBoxContainer" parent="MenuWindow/MarginContainer/Tabs"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="MenuWindow/MarginContainer/Tabs/Particles"]
layout_mode = 2
text = "
fields are scrollable"

[node name="UniverseRadiusSpinBox" type="SpinBox" parent="MenuWindow/MarginContainer/Tabs/Particles"]
unique_name_in_owner = true
layout_mode = 2
value = 70.0
alignment = 2
prefix = "Universe Radius:"

[node name="AttractionRadiusSpinBox" type="SpinBox" parent="MenuWindow/MarginContainer/Tabs/Particles"]
unique_name_in_owner = true
layout_mode = 2
step = 0.001
value = 10.0
alignment = 2
prefix = "Attraction Radius:"

[node name="RepelRadiusSpinBox" type="SpinBox" parent="MenuWindow/MarginContainer/Tabs/Particles"]
unique_name_in_owner = true
layout_mode = 2
step = 0.015
value = 1.005
alignment = 2
prefix = "Repel Radius:"

[node name="ForceStrengthSpinBox" type="SpinBox" parent="MenuWindow/MarginContainer/Tabs/Particles"]
unique_name_in_owner = true
layout_mode = 2
max_value = 10.0
step = 0.001
value = 0.01
alignment = 2
prefix = "Force Strength:"

[node name="MaxSpeedSpinBox" type="SpinBox" parent="MenuWindow/MarginContainer/Tabs/Particles"]
unique_name_in_owner = true
layout_mode = 2
step = 0.1
value = 2.0
alignment = 2
prefix = "Max Speed:"

[connection signal="pressed" from="MenuWindow/MarginContainer/Tabs/Simulation/UpdateButton" to="." method="_on_update_button_pressed"]
[connection signal="toggled" from="MenuWindow/MarginContainer/Tabs/Simulation/WrapUniverseCheckBox" to="." method="_on_wrap_universe_check_box_toggled"]
[connection signal="value_changed" from="MenuWindow/MarginContainer/Tabs/Particles/UniverseRadiusSpinBox" to="." method="_on_universe_radius_spin_box_value_changed"]
[connection signal="value_changed" from="MenuWindow/MarginContainer/Tabs/Particles/AttractionRadiusSpinBox" to="." method="_on_attraction_radius_spin_box_value_changed"]
[connection signal="value_changed" from="MenuWindow/MarginContainer/Tabs/Particles/RepelRadiusSpinBox" to="." method="_on_repel_radius_spin_box_value_changed"]
[connection signal="value_changed" from="MenuWindow/MarginContainer/Tabs/Particles/ForceStrengthSpinBox" to="." method="_on_force_strength_spin_box_value_changed"]
[connection signal="value_changed" from="MenuWindow/MarginContainer/Tabs/Particles/MaxSpeedSpinBox" to="." method="_on_max_speed_spin_box_value_changed"]
